# hello-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hellodemo/: __init__.py  core.py
tests/: test_core.py
