[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "hello-super-package"
version = "0.1.0"
description = "A tiny demo package that says hello."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["demo", "hello", "example"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
    "pandas>=2.3"
]                  # add runtime deps here, e.g. ["requests>=2.32"]

[project.urls]
Homepage = "https://github.com/yourname/hello-demo-pkg"
Issues = "https://github.com/yourname/hello-demo-pkg/issues"

[project.scripts]
hello-demo = "hellodemo.core:main"  # creates a CLI: `hello-demo`

[tool.hatch.build.targets.wheel]
packages = ["src/hellodemo"] # package path

[tool.hatch.build.targets.sdist]
exclude = ["venv/**", ".venv/**", "dist/**", "build/**", "*.egg-info/**", "__pycache__/**"]
